# yard

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  README.md  pyproject.toml  tasks.py
.github/workflows/: deploy.yml  validate.yml
marda_registry/: utils.py
marda_registry/data/extractors/: doli-mvl.yml  pasta-converters.yml
marda_registry/data/filetypes/: fischerScope-hap.yml  klaG200X-nmd.yml
marda_registry/models/: __init__.py
yard/: __init__.py  app.py
yard/data/: meta.json
yard/data/extractors/: datalab.yml  fastnda.yml  galvani.yml  navani.yml  neware-nda.yml  nmrglue.yml  oscem-life.yml  pasta-converters.yml  quantumespresso.yml  rosettasciio.yml  yadg.yml  zeiss-tiff-meta.yml
yard/data/filetypes/: arbin-res.yml  biologic-mpr.yml  diffrac-eva-xy.yml  epu-dir.yml  jcamp-dx.yml  neware-nda.yml  oscem-json.yml  qe-cp-in.yml  rigaku-rasx.yml  serialem-dir.yml  tomo5-dir.yml
yard/data/lfs/: .gitattributes
yard/data/lfs/arbin-res/: arbin.res
yard/data/lfs/diffrac-eva-xy/: diffrac-eva-example.xy
yard/data/lfs/epu-dir/epu_example/: FoilHole_31936319_Data_31923985_31923987_20240831_200517.xml  FoilHole_31936319_Data_31923988_31923990_20240831_200519.xml  FoilHole_31936319_Data_31923991_31923993_20240831_200522.xml  FoilHole_31936319_Data_31923994_31923996_20240831_200524.xml  FoilHole_31936319_Data_31923997_31923999_20240831_200529.xml  FoilHole_31936319_Data_31924000_31924003_20240831_200533.xml  FoilHole_31936319_Data_31924004_31924006_20240831_200538.xml  (+3 more)
yard/data/lfs/jcamp-dx/: .gitattributes  13c.jdx
yard/data/lfs/rigaku-rasx/: example.rasx
yard/static/: style.css
yard/templates/: base.html  index.html
