[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.metadata]
# required to allow git deps in optional dependencies
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["yard"]

[project]
name = "datatractor-yard"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "httpx",
    "invoke",
    "jinja2",
    "linkml ~= 1.6, != 1.6.2",
    "linkml-runtime ~= 1.6, != 1.6.1",
    "mongomock",
    "pre-commit",
    "pydantic ~= 2.0",
    "uvicorn"
]

[project.optional-dependencies]
test = [
    "pytest",
    "marda-extractors-api[formats] @ git+https://github.com/datatractor/yard.git",
]

dev = [
    "pre-commit",
]

[project.urls]
repository = "https://github.com/datatractor/yard"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "Q"]
ignore = ["E501", "E402"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
per-file-ignores = {}

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
